AnalyzePom added Improvements and fixes